2001-05-30  Sam Steingold  <sds@gnu.org>

	* pathname.d (merge-pathnames): fixed the 2001-05-24 patch to
	handle unbound defaults

2001-05-30  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (*package-tasks-treat-specially*): set to NIL
	(#+CROSS subr-info): `in-package' is now an always-evaluated macro
	(c-GLOBAL-FUNCTION-CALL): remove `in-package' from the list of
	specially treated tasks.

2001-05-30  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (with-defining-c-type): new macro
	(parse-components, c-struct-constructor): new functions
	(parse-c-type): use the above
	(to-c-typedecl): handle the recursive types (like linked lists)
	(def-c-enum): make `name' a synonym for `int'

2001-05-27  Sam Steingold  <sds@gnu.org>

	* regexp.lisp (mregerror): FINALIZE is in EXT

2001-05-25  Sam Steingold  <sds@gnu.org>

	* install.lisp, install.bat: bind LISP, FAS and MEM files with CLISP
	* makemake.in: added install.* to the win32 binary distribution

2001-05-25  Sam Steingold  <sds@gnu.org>

	* dirkey.lisp (dir-key-info): `dkey-info' is in LDAP, not SYS
	(with-dir-key-search): ditto for `dkey-search-iterator',
	`dkey-search-next-key', and `dkey-search-next-att'

2001-05-24  Sam Steingold  <sds@gnu.org>

	* pathname.d (merge-pathnames): if PATHNAME is a logical
	namestring, while DEFAULT is a physical pathname, coerse DEFAULT
	to logical using whole_namestring().

2001-05-24  Sam Steingold  <sds@gnu.org>

	hostname resolution is now optional in
	SOCKET-STREAM-PEER and SOCKET-STREAM-LOCAL.
	* stream.d (host_data_fetcher): accept an additional boolean argument.
	(publish_host_data): pass `resolve_p' to func
	(SOCKET-STREAM-PEER, SOCKET-STREAM-LOCAL): 1 optional argument
	* subr.d: ditto
	* socket.d (socket_getlocalname, socket_getpeername): accept an
	additional `resolve_p' argument.

2001-05-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib): pack in the build directory.

2001-05-23  Sam Steingold  <sds@gnu.org>

	* version.h: 2.26 is released
